--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@
     list-style: none;
     padding: 0;
     margin: 0 auto;         
-    max-width: 600px;         
-    max-width: 400px;
+    max-width: 800px;         
   }
   .image-list li {
     margin-bottom: 20px;
@@ -20,5 +19,37 @@
   }
   .img-Big{
     width: 100%;
-    height: 140px;
   }
+.site-footer {
+  margin-top: 60px;
+  padding: 20px;
+  background: #222;
+  color: #fff;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  margin: 0 auto;
+}
+
+.footer-text {
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+  text-align: right;
+}
+
+.footer-text p {
+  margin: 0;
+  line-height: 1;
+}
+
+.footer-img {
+  width: 60px;
+  height: auto;
+  border-radius: 8px;
+}
+
