--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-   <app-navbar></app-navbar>
-    <section class="title">
-        <img class="img-Big" src="./assets/SC1.gif"/>
-    </section>
-  <ul class="image-list">
-    <li><img src="./assets/SC2.png" alt="Image 1" /></li>
-    <li><img src="./assets/SC3.jpeg" alt="Image 2" /></li>
-    <li><img src="./assets/SC4.jpeg" alt="Image 2" /></li>
-    <li><img src="./assets/SC4.gif" alt="Image 3" /></li>
-    <li><img src="./assets/SC5.gif" alt="Image 4" /></li>
-    <li><img src="./assets/SC6.png" alt="Image 5" /></li>
-  </ul>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
