--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
  <nav>
         <a routerLink="/">Strona główna</a> |
+        <a routerLink="/Games">Games</a> |
+        <a target="_blank" href="https://shop.stachuchuj.pl">Official Stachu Chuj Merchandise</a> |
         <a routerLink="/BlackMail">BlackMail</a> |
-        <a target="_blank" href="https://open.spotify.com/episode/6WJtT4phmdMJpp2KuYhHmZ">M2AF</a> |
-        <a target="_blank" href=" https://www.temu.com/pl/kapryśny-kostium-kota-w-czarno-białe-paski-z-puszystym-ogonem-opaską-z-uszami-kota-obrożą-z-sztucznej-skóry-rękawiczkami-i-skarpetkami-w-paski-idealny-na-cosplay-halloween-i-imprezy-tematyczne-g-601099632165510.html?top_gallery_url=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2Ffancy%2F7b3970a0-dad8-4a05-9e60-52e0c509c89d.jpg&spec_gallery_id=4314327842&share_token=yUSAciUNA5cGqoZ4fleHv3PfZ1iCmPmEqEJhqt6N5f-U9-ZB5p3yxSM9otjdhZpbYf14aPBqw8hPSAzuMl5yg2JQ6uDESnLcBc7XSd6zeq2jD93SXw-p9ir06Rx4B1aSmfI358I-fJWE5fGeOLyTM6Y3VUaShHF9yvqV_q8QM9r&_x_vst_scene=adg&_x_ads_sub_channel=shopping&_x_ns_prz_type=-1&_x_ns_sku_id=17592644732356&_x_ns_gid=601099632165510&_x_ads_channel=google&_x_gmc_account=5583656541&_x_login_type=Google&_x_ns_gg_lnk_type=adr&_x_ads_account=1703989576&_x_ads_set=22523813509&_x_ads_id=182134080387&_x_ads_creative_id=750605852095&_x_ns_source=g&_x_ns_gclid=Cj0KCQjw-NfDBhDyARIsAD-ILeCyO5gadR5a974tSPJFfDAkxHW7ONT1MBjAyN7R2mmT_ge9Zdg_A3saAumpEALw_wcB&_x_ns_placement=&_x_ns_match_type=&_x_ns_ad_position=&_x_ns_product_id=5583656541-17592644732356&_x_ns_target=&_x_ns_devicemodel=&_x_ns_wbraid=Cj4KCAjw1dLDBhA3Ei4Axh45buUTrWBiDAq_BySYLZSlNgu8b4YlpgztdWSahtkrv60Wki-Ewax8aT3WGgJ_wQ&_x_ns_gbraid=0AAAAAo4mICEwz58jdW4n-fo5NT-t_-gVn&_x_ns_targetid=pla-2425138370849&refer_page_name=kuiper&refer_page_id=13554_1752614939506_8jkwt1s6qb&refer_page_sn=13554&_x_sessn_id=oyj5dh8qx0">Official Stachu Merchandise</a>
+        <a target="_blank" href="https://open.spotify.com/episode/6WJtT4phmdMJpp2KuYhHmZ">M2AF</a> 
     </nav>
     <button class="dark-mode-toggle" (click)="toggleDarkMode()">Toggle Dark Mode</button>
