added new game first version

--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -3,6 +3,13 @@
     </section>
   <ul class="image-list">
     <li class="games-list-item">
+        <a routerLink="/Shooter">
+            <img src="./assets/ph.png" alt="Image 1" />
+            <h3>Stachu Shooter</h3>
+            <p>przeżyj niesamowite wrażenia strzelająca prosto w Stacha</p>
+        </a>
+    </li>
+    <li class="games-list-item">
         <a routerLink="/Clicker">
             <img src="./assets/ph.png" alt="Image 1" />
             <h3>Stachu Clicker</h3>
